idf_component_register(SRCS 
                    "PipeInspector_main.c" 
                    "periphs/mpu6050_driver.c"
                    "periphs/pwm.c"
                    "periphs/usb.c"
                    "periphs/can.c"
                    "periphs/encoder.c"
                    "periphs/led.c"
                      INCLUDE_DIRS ".")
